<resources>
    <string name="app_name">FirstGame</string>
    <string name="welcome">Crystal Creature</string>
    <string name="los">Los! Sammel die Herzen!</string>
    <string name="btnStart">Start Game</string>
    <string name="btnObj">Test Object</string>
    <string name="herz_description">Herz für Tiere</string>
    <string name="points">Punkte</string>
    <string name="round">Runde</string>
    <string name="hits">Hits</string>
    <string name="time">Zeit</string>
    <string name="game_over">Game Over!</string>
    <string name="menu_btn">MENU</string>
    <string name="inventory_btn">ITEMS</string>
    <string name="next_monster"><![CDATA[->]]></string>
    <string name="next_creature"><![CDATA[->]]></string>
    <string name="back_creatue"><![CDATA[<-]]></string>
    <string name="selectbutton">Select Creature</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help - How to play Crystal Creatures</string>
    <string name="getHunger">Hunger</string>
    <string name="getAge">Age</string>
    <string name="getClean">Clean</string>
    <string name="getSpecies">Species</string>
    <string name="textview">TextView</string>
    <item name="creationTime" type="id" />
</resources>
