<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hintergrund"
    tools:context="com.example.baby.firstgame.FirstGamelActivity">

    <TextView
        android:id="@+id/round"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/round"
        tools:layout_editor_absoluteY="15dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/points"
        android:layout_width="78dp"
        android:layout_height="22dp"
        android:text="@string/points"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintRight_toLeftOf="@+id/round"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.08" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/los"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946"
        android:id="@+id/textView6"
        android:layout_marginBottom="8dp" />

    <FrameLayout
        android:id="@+id/GAMEVIEW"
        android:layout_width="338dp"
        android:layout_height="403dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="53dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            app:srcCompat="@drawable/ic_herz"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/hits"
        app:layout_constraintTop_toBottomOf="@+id/points"
        app:layout_constraintVertical_bias="0.989" />

    <TextView
        android:id="@+id/hits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hits"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.985"
        app:layout_constraintTop_toBottomOf="@+id/round" />

</android.support.constraint.ConstraintLayout>
