<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/darker_gray"
    android:visibility="visible"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="16dp"
        android:text="@string/getAge"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <ProgressBar
        android:id="@+id/hungerBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:max="100"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ageBar" />

    <ProgressBar
        android:id="@+id/ageBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:max="4"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cleanBar" />

    <ProgressBar
        android:id="@+id/cleanBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:max="100"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintLeft_toRightOf="@+id/textView7"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/progressBar2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/getHunger"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/getClean"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded"
        app:layout_constraintBottom_toTopOf="@+id/happiness" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/getSpecies"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:text=""
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/hungerBar"
        app:layout_constraintVertical_bias="0.988"
        app:layout_constraintLeft_toRightOf="@+id/textView8"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/hunger"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/age"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="7dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/clean"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        android:layout_marginLeft="0dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/clean"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/textView7"
        android:layout_marginLeft="0dp"
        tools:ignore="HardcodedText,RtlHardcoded"
        app:layout_constraintBottom_toTopOf="@+id/happy" />

    <ImageView
        android:id="@+id/creatureImg"
        android:layout_width="170dp"
        android:layout_height="176dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription=""
        app:srcCompat="@drawable/nicole1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/name"
        android:layout_width="167dp"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/creatureImg"
        app:layout_constraintVertical_bias="0.495" />

    <TextView
        android:id="@+id/happiness"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/happiness"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:max="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintLeft_toLeftOf="@+id/happy"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toRightOf="@+id/happiness"
        android:layout_marginLeft="0dp"
        tools:ignore="RtlHardcoded" />
</android.support.constraint.ConstraintLayout>
